js recap finished

--- a/01_Day_JavaScript_Refresher/index.html
+++ b/01_Day_JavaScript_Refresher/index.html
@@ -6,7 +6,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<button>Hi</button>
+		<button id="btn">Hi</button>
 		<script src="main.js" type="module"></script>
 	</body>
 </html>
