--- a/03_Day_Setting_Up/30-days-of-react/public/index.html
+++ b/03_Day_Setting_Up/30-days-of-react/public/index.html
@@ -2,33 +2,80 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="Intro to react" />
-		<title>30 days of react</title>
+		<meta name="viewport" content="User card" />
+		<title>User Card</title>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap"
 			rel="stylesheet"
 		/>
 		<style>
 			* {
 				box-sizing: border-box;
-				font-family: 'Montserrat', sans-serif;
-				margin: 0;
 				padding: 0;
-			}
-
-			.title {
-				text-align: center;
-				font-weight: bold;
 				margin: 0;
-				padding: 20px 0;
+				font-family: 'Yanone Kaffeesatz', sans-serif;
 			}
-			.main {
+			.card {
+				border-radius: 5px;
+				border: 2px solid rgb(241, 241, 241);
+				background-color: rgb(241, 241, 241);
+				padding: 10px;
+				margin: 10px;
 				display: flex;
-				justify-content: space-around;
+				flex-direction: column;
 			}
-			img {
-				height: 300px;
-				width: 300px;
+			.user-thumbnail {
+				border-radius: 50%;
+				height: 200px;
+				width: 200px;
+				padding-bottom: 5px;
+			}
+			.name-wrapper {
+				display: flex;
+				flex-direction: row;
+				width: 200px;
+				padding: 10px 0 20px 0;
+				justify-content: space-between;
+			}
+			.name {
+				font-weight: bold;
+				font-size: 32px;
+				letter-spacing: 3px;
+			}
+			.job {
+				width: 200px;
+				font-size: 22px;
+				padding: 10px 0 20px 0;
+			}
+			.verified {
+				width: 18px;
+				height: 18px;
+			}
+			.skill-wrapper {
+				display: flex;
+				justify-content: flex-start;
+				flex-wrap: wrap;
+				padding: 10px;
+			}
+			.skill {
+				border-radius: 10px;
+				background-color: rgb(3, 192, 192);
+				text-align: center;
+				color: white;
+				font-size: 32px;
+				font-weight: bold;
+				height: 50px;
+				width: auto;
+				padding: 10px;
+				margin: 10px;
+			}
+			.end > span {
+				font-size: 20px;
+			}
+			.end > img {
+				width: 20px;
+				height: 20px;
+				padding-right: 10px;
 			}
 		</style>
 	</head>
