--- a/03_Day_Setting_Up/30-days-of-react/public/index.html
+++ b/03_Day_Setting_Up/30-days-of-react/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="Subscribe page" />
-		<title>Subscribe</title>
+		<meta name="viewport" content="width=wax, initial-scale=1.0" />
+		<title>hex color</title>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap"
 			rel="stylesheet"
 		/>
 		<style>
@@ -14,37 +14,24 @@
 				box-sizing: border-box;
 				padding: 0;
 				margin: 0;
-				font-family: 'Noto Sans JP', sans-serif;
+				font-family: 'Work Sans', sans-serif;
 			}
-			#root {
-				margin: 20px;
+			.app {
+				margin: 10px;
 			}
-			.subscribe {
-				display: flex;
-				flex-direction: column;
-				background-color: aquamarine;
-				align-items: center;
-				border-radius: 10px;
-				padding: 20px;
+			.color-holder {
 				text-align: center;
 			}
-			.subscribe-title,
-			.subscribe-text,
-			.subscribe-form,
-			.subscribe-btn {
-				padding: 10px;
-			}
-			.subscribe-form-input {
-				margin: 10px;
+			.color-holder > div {
 				border-radius: 10px;
-				border: 10px solid white;
-			}
-			.subscribe-btn {
+
+				height: 80px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				font-size: 30px;
+				margin: 2px;
 				color: white;
-				background-color: rgba(212, 22, 111, 0.644);
-				border-radius: 10px;
-				width: 15%;
-				border: 0px solid white;
 			}
 		</style>
 	</head>
