--- a/03_Day_Setting_Up/30-days-of-react/public/index.html
+++ b/03_Day_Setting_Up/30-days-of-react/public/index.html
@@ -8,6 +8,45 @@
 			href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap"
 			rel="stylesheet"
 		/>
+		<!DOCTYPE html>
+		<html lang="en">
+			<head>
+				<meta charset="UTF-8" />
+				<meta name="viewport" content="Intro to react" />
+				<title>30 days of react</title>
+				<link
+					href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
+					rel="stylesheet"
+				/>
+				<style>
+					* {
+						box-sizing: border-box;
+						font-family: 'Montserrat', sans-serif;
+						margin: 0;
+						padding: 0;
+					}
+
+					.title {
+						text-align: center;
+						font-weight: bold;
+						margin: 0;
+						padding: 20px 0;
+					}
+					.main {
+						display: flex;
+						justify-content: space-around;
+					}
+					img {
+						height: 300px;
+						width: 300px;
+					}
+				</style>
+			</head>
+			<body>
+				<div id="root"></div>
+			</body>
+		</html>
+
 		<style>
 			body,
 			html {
