--- a/03_Day_Setting_Up/30-days-of-react/public/index.html
+++ b/03_Day_Setting_Up/30-days-of-react/public/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
 			rel="stylesheet"
 		/>
 		<style>
@@ -14,38 +14,36 @@
 				box-sizing: border-box;
 				padding: 0;
 				margin: 0;
-				font-family: 'Chilanka', cursive;
+				font-family: 'Raleway', sans-serif;
 			}
 			.header-wrapper {
-				padding: 20px;
 				display: flex;
 				flex-direction: column;
 				align-items: center;
+				padding: 20px;
 			}
 			.header-title {
-				font-size: 60px;
-				padding: 10px;
+				font-size: 70px;
 			}
 			.header-subtitle {
 				font-size: 30px;
-				padding: 10px;
 			}
-			.calendar-wrapper {
-				padding: 10px 15%;
-				color: white;
+			.grid-wrapper {
+				padding: 0 15%;
 				display: flex;
 				flex-wrap: wrap;
-				font-size: 40px;
 			}
-			.calendar-day {
-				background-color: blue;
-				margin: 1px;
-				padding: 10px;
-				width: 10%;
-				height: 100px;
+			.cell-wrapper {
+				background-color: red;
+				height: 130px;
+				width: 12%;
 				display: flex;
 				justify-content: center;
 				align-items: center;
+				color: #fff;
+				font-size: 20px;
+				margin: 1px;
+				border-radius: 5px;
 			}
 		</style>
 	</head>
