--- a/03_Day_Setting_Up/30-days-of-react/public/index.html
+++ b/03_Day_Setting_Up/30-days-of-react/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<meta name="viewport" content="World population" />
+		<title>World population</title>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
 			rel="stylesheet"
@@ -20,7 +20,7 @@
 				display: flex;
 				flex-direction: column;
 				align-items: center;
-				padding: 20px;
+				padding: 10px;
 			}
 			.header-title {
 				font-size: 70px;
@@ -28,22 +28,26 @@
 			.header-subtitle {
 				font-size: 30px;
 			}
-			.grid-wrapper {
-				padding: 0 15%;
+			.popu-wrapper {
 				display: flex;
-				flex-wrap: wrap;
+				justify-content: flex-start;
+				font-size: 25px;
+				margin: 0 10%;
 			}
-			.cell-wrapper {
-				background-color: red;
-				height: 130px;
-				width: 12%;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				color: #fff;
-				font-size: 20px;
-				margin: 1px;
-				border-radius: 5px;
+			.popu-countryname {
+				width: 15%;
+				padding: 5px;
+			}
+			.popu-length {
+				width: 70%;
+			}
+			.popu-value {
+				width: 15%;
+				padding: 5px;
+			}
+			.popu-length-bar {
+				background-color: orange;
+				width: 100%;
 			}
 		</style>
 	</head>
