--- a/03_Day_Setting_Up/30-days-of-react/public/index.html
+++ b/03_Day_Setting_Up/30-days-of-react/public/index.html
@@ -2,25 +2,31 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="World population" />
-		<title>World population</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
 			rel="stylesheet"
 		/>
 		<style>
-			body,
-			html {
+			body {
 				box-sizing: border-box;
 				padding: 0;
 				margin: 0;
-				font-family: 'Raleway', sans-serif;
+				font-family: 'Roboto', sans-serif;
 			}
+
 			.header-wrapper {
 				display: flex;
 				flex-direction: column;
-				align-items: center;
-				padding: 10px;
+				align-items: flex-start;
+				text-align: center;
+				padding: 2% 10%;
+				background-color: rgb(7, 175, 218);
+			}
+			.App {
+				display: flex;
+				flex-direction: column;
 			}
 			.header-title {
 				font-size: 70px;
@@ -28,26 +34,47 @@
 			.header-subtitle {
 				font-size: 30px;
 			}
-			.popu-wrapper {
+			.req-wrapper {
+				padding: 1% 10%;
+			}
+			.req-list {
+				list-style: none;
+			}
+			.profile-wrapper {
+				padding: 2% 10%;
 				display: flex;
-				justify-content: flex-start;
-				font-size: 25px;
-				margin: 0 10%;
+				flex-direction: column;
 			}
-			.popu-countryname {
-				width: 15%;
-				padding: 5px;
+			.profile-image {
+				height: 200px;
+				width: 200px;
+				border-radius: 50%;
 			}
-			.popu-length {
-				width: 70%;
+			.profile-wrapper > span {
+				font-size: 20px;
+				padding-top: 10px;
 			}
-			.popu-value {
-				width: 15%;
-				padding: 5px;
-			}
-			.popu-length-bar {
-				background-color: orange;
+			.footer {
+				background-color: rgb(7, 175, 218);
+				position: absolute;
+				bottom: 0;
 				width: 100%;
+				height: 30px;
+				text-align: center;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+			}
+			.btn-wrapper {
+				padding: 0 10%;
+				height: 180px;
+			}
+			.btn-wrapper > button {
+				background-color: rgb(7, 175, 218);
+				color: white;
+				border: 0;
+				padding: 10px;
+				border-radius: 5px;
 			}
 		</style>
 	</head>
