--- a/03_Day_Setting_Up/30-days-of-react/public/index.html
+++ b/03_Day_Setting_Up/30-days-of-react/public/index.html
@@ -24,57 +24,65 @@
 				padding: 2% 10%;
 				background-color: rgb(7, 175, 218);
 			}
+			.header-wrapper > span {
+				padding-top: 1px;
+			}
 			.App {
 				display: flex;
 				flex-direction: column;
 			}
 			.header-title {
-				font-size: 70px;
+				font-size: 60px;
 			}
 			.header-subtitle {
 				font-size: 30px;
 			}
-			.req-wrapper {
-				padding: 1% 10%;
-			}
-			.req-list {
-				list-style: none;
-			}
-			.profile-wrapper {
-				padding: 2% 10%;
+			.country-details-wrapper {
 				display: flex;
 				flex-direction: column;
-			}
-			.profile-image {
-				height: 200px;
-				width: 200px;
-				border-radius: 50%;
-			}
-			.profile-wrapper > span {
+				align-items: center;
+				margin: 20px 0;
 				font-size: 20px;
-				padding-top: 10px;
 			}
-			.footer {
-				background-color: rgb(7, 175, 218);
-				position: absolute;
-				bottom: 0;
-				width: 100%;
-				height: 30px;
-				text-align: center;
+			.country-wrapper {
 				display: flex;
 				flex-direction: column;
+				box-shadow: 0 0 5px gray;
+				width: 40%;
 				justify-content: center;
-			}
-			.btn-wrapper {
-				padding: 0 10%;
-				height: 180px;
-			}
-			.btn-wrapper > button {
-				background-color: rgb(7, 175, 218);
-				color: white;
-				border: 0;
-				padding: 10px;
+				align-items: center;
 				border-radius: 5px;
+			}
+			.country-wrapper > img {
+				width: 300px;
+				height: 150px;
+				box-shadow: 0 0 5px gray;
+				margin: 10px 0 0 0;
+			}
+			.country-name {
+				display: flex;
+				justify-content: center;
+				margin: 10px;
+			}
+			.stats-wrapper {
+				display: flex;
+				flex-direction: column;
+				width: 100%;
+			}
+			.stats-wrapper > span {
+				padding: 5px 5px 5px 20px;
+				display: flex;
+				justify-content: flex-start;
+				flex-direction: row;
+			}
+			.App > button {
+				background-color: rgb(7, 175, 218);
+				border: 0;
+				width: 10%;
+				align-self: center;
+				font-size: 15px;
+				cursor: pointer;
+				padding: 10px;
 			}
 		</style>
 	</head>
