--- a/03_Day_Setting_Up/30-days-of-react/public/index.html
+++ b/03_Day_Setting_Up/30-days-of-react/public/index.html
@@ -30,6 +30,7 @@
 			.App {
 				display: flex;
 				flex-direction: column;
+				height: 100vh;
 			}
 			.header-title {
 				font-size: 60px;
@@ -83,6 +84,7 @@
 				font-size: 15px;
 				cursor: pointer;
 				padding: 10px;
+				margin: 10px;
 			}
 		</style>
 	</head>
